--- a/templates/listing.html
+++ b/templates/listing.html
@@ -153,10 +153,10 @@
     }
 
     .flash-messages li {
-        background-color: #f8d7da;
-        color: #721c24;
+        background-color: #bfe2b8;
+        color: #215832;
         padding: 10px 15px;
-        border: 1px solid #f5c6cb;
+        border: 1px solid #bfe2b8;
         border-radius: 5px;
         margin-bottom: 10px;
     }
