--- a/templates/update-listing.html
+++ b/templates/update-listing.html
@@ -167,7 +167,7 @@
             <label for="image">Upload Photo</label>
             <input type="file" id="image" name="image" accept="image/*" required>
 
-            <button type="submit" class="submit-button">Create Listing</button>
+            <button type="submit" class="submit-button">Update Listing</button>
         </form>
     </div>
 </main>
